logs/tracking/build.make.605.log.stderr
In file included from /usr/include/pcl-1.7/pcl/visualization/pcl_visualizer.h:52:0,
                 from /usr/include/pcl-1.7/pcl/visualization/cloud_viewer.h:39,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/PointCloudMap.h:10,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/SparseAlignment.h:13,
                 from /home/dexheimere/thesis_ws/src/tracking/src/main.cpp:20:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h: In member function ‘bool pcl::visualization::AreaPickingEvent::getPointsIndices(std::vector<int>&) const’:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h:64:30: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
           if (nb_points_ == -1)
                              ^
/home/dexheimere/thesis_ws/src/tracking/src/main.cpp: In function ‘int main()’:
/home/dexheimere/thesis_ws/src/tracking/src/main.cpp:103:76: error: ‘BORDER_DEFAULT’ was not declared in this scope
     cv::cornerHarris( img_pyramid_ref[0], dst, blockSize, apertureSize, k, BORDER_DEFAULT );
                                                                            ^
/home/dexheimere/thesis_ws/src/tracking/src/main.cpp:103:76: note: suggested alternative:
In file included from /usr/local/include/opencv2/core.hpp:54:0,
                 from /home/dexheimere/thesis_ws/src/tracking/src/main.cpp:9:
/usr/local/include/opencv2/core/base.hpp:242:5: note:   ‘BORDER_DEFAULT’
     BORDER_DEFAULT     = BORDER_REFLECT_101, //!< same as BORDER_REFLECT_101
     ^
make[2]: *** [CMakeFiles/tracking.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/tracking.dir/all] Error 2
make: *** [all] Error 2
